# course-service-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_eng.md  description_de.txt  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_enable_rls.py  003_add_providers.py  004_providers_list_policy.py  005_add_chapter_description.py
app/: config.py  main.py
app/crud/: __init__.py  chapter.py  course.py  lesson.py  lesson_video.py  provider.py
app/database/: bootstrap.py  session.py
app/models/: __init__.py  chapter.py  course.py  lesson.py  lesson_video.py  provider.py
app/routes/: __init__.py  chapters.py  courses.py  lesson_videos.py  lessons.py  providers.py
app/schemas/: __init__.py  chapter.py  course.py  provider.py
crud/: __init__.py  chapter.py  course.py  lesson.py  lesson_video.py  provider.py
database/: bootstrap.py  session.py
models/: __init__.py  chapter.py  course.py  lesson.py  lesson_video.py  provider.py
routes/: __init__.py  chapters.py  courses.py  lesson_videos.py  lessons.py  providers.py
schemas/: __init__.py  chapter.py  lesson.py  lesson_video.py
scripts/: docker-entrypoint.sh
tests/: conftest.py  test_chapters.py  test_tenant_isolation.py
