[project]
name = "course-service"
version = "0.1.0"
description = "Multi-tenant online course backend foundation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.9",  # harmless default for FastAPI
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "testcontainers[postgres]>=4.0",
    "ruff>=0.8",
    "black>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.black]
line-length = 75
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"